# drf-jsonschema-serializer

./: .bumpversion.cfg  .editorconfig  .flake8  .gitignore  .readthedocs.yaml  CREDITS.txt  LICENSE  LICENSE.txt  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  code-quality.yml
docs/: changelog.rst  conf.py  developers.rst  index.rst  quickstart.rst  reference.rst  usage.rst
docs/_build/doctrees/: changelog.doctree  developers.doctree  environment.pickle  index.doctree  quickstart.doctree  reference.doctree  usage.doctree
docs/_build/html/: .buildinfo  changelog.html  developers.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  reference.html  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: quickstart.rst.txt  reference.rst.txt  usage.rst.txt
drf_jsonschema/: __init__.py  convert.py  converters.py  fields.py
drf_jsonschema/tests/: conftest.py  test_convert.py  test_fields.py
drf_jsonschema_serializer/: converters.py  fields.py
testapp/: models.py  settings.py
tests/: __init__.py  conftest.py  models.py  test_convert.py  test_fields.py  test_model_serializer.py
